<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/alarmFragment"
        android:icon="@drawable/ic_alarm"
        android:title="@string/alarm" />
    <item
        android:id="@+id/clockFragment"
        android:icon="@drawable/ic_clock"
        android:title="@string/clock" />
    <item
        android:id="@+id/timerFragment"
        android:icon="@drawable/ic_timer"
        android:title="@string/timer" />
    <item
        android:id="@+id/stopwatchFragment"
        android:icon="@drawable/ic_stop_watch"
        android:title="@string/stopwatch" />
</menu>